# SaveMediaClasses

./: .gitignore  LICENSE  SaveMedia.spec  app.py  app_logging.py  check_flet_compat.py  config.json  config.py  events.py  i18l.py  i18n.py  locale.py  main.py  main.spec  paths.py  pyproject.toml  readme.md  savemedia.db  services.py  state.py  ui_utils.py
config/: __init__.py  constants.py  runtime.py  theme.py  tools.py  utils.py
controllers/: __init__.py  clipboard_controller.py  i18n_target.py  navigation_controller.py  notification_controller.py  theme_controller.py  theme_target.py  tools_controller.py  window_controller.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
locale/: en.json  ru.json
managers/: __init__.py  config_manager.py  download_manager.py  download_orchestrator.py  download_repository.py  downloader.py  providers.py  snapshot.py  thumbnails.py  tool_registry.py  tool_specs.py  tools_manager.py
screens/: __init__.py  color_row.py  history_screen.py  main_screen.py  settings_screen.py
tests/: conftest.py  test_config.py  test_config_manager.py  test_download_manager.py  test_download_repository.py  test_notifications.py  test_orchestrator.py  test_providers.py  test_snapshot.py  test_tool_specs.py  test_url_parsing.py
